# ZeroLLM

./: .env  .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: config.hpp
src/distributed/: abstract_backend.hpp  cpu_backend.hpp  dist_factory.hpp  dist_types.hpp  gpu_backend.cpp  gpu_backend.hpp
src/kernel/cuda/: adam.cu  adam.cuh  adamw.cu  adamw.cuh  add.cu  add.cuh  cross_entropy.cu  cross_entropy.cuh  embedding.cu  embedding.cuh  layernorm.cu  layernorm.cuh  linear.cu  linear.cuh  matmul.cu  matmul.cuh  mha.cu  mha.cuh  relu.cu  relu.cuh  sgd.cu  sgd.cuh  softmax.cu  softmax.cuh  transpose.cu  transpose.cuh
src/layer/: activation.hpp  embedding.cpp  embedding.hpp  feedward.cpp  feedward.hpp  layernorm.cpp  layernorm.hpp  linear.cpp  linear.hpp  mha.cpp  mha.hpp  module.hpp  relu.cpp  relu.hpp  transformer_block.cpp  transformer_block.hpp  transformer_decoder.cpp  transformer_decoder.hpp
src/loss/: cross_entropy.cpp  cross_entropy.hpp  loss.hpp
src/model/: zerollm.cpp  zerollm.hpp  zerollm_config.hpp
src/optimizer/: adam.cpp  adam.hpp  adamw.cpp  adamw.hpp  optimizer.hpp  sgd.cpp  sgd.hpp
src/runtime/: dataloader.cpp  dataloader.hpp
src/runtime/trainer/: train_zerollm.cpp  train_zerollm_dp.cpp
src/tools/: plotter.cpp
src/utils/: async_logger.cpp  async_logger.hpp  processorbar.cpp  processorbar.hpp  recorder.hpp  serializer.hpp
src/utils/tokenizer/: bpe_tokenizer.cpp  bpe_tokenizer.hpp
tests/: bpe_test.cpp  kernel_add.cpp  kernel_embedding.cpp  kernel_linear.cpp  kernel_matmul.cpp  kernel_mha.cpp  kernel_relu.cpp  kernel_softmax.cpp  kernel_transpose.cpp  logger_test.cpp  module_test.cpp  processorbar_test.cpp  save_load_test.cpp  tinystories_txt2json.cpp  tokenizer_fast.cpp  train_bpe_tokenizer.cpp
